CHANGES IN FLTK 1.1.8

	- Included fltk.spec in configure.in (STR #1274)
	- Fixed insufficiently invalidated cache 
	  in Fl_Browser (STR #1265)
	- Attempt to fix multi monitor issues (STR #1153)
	- Fixed warnings when compiling w/Cygwin (STR #1152)
	- Fixed missing reset of flag in FLUID (STR #1187)
	- Fixed maximizing in OS X (STR #1221)
	- Fixed 'make distclean' to remove binaries inside
	  MacOS app packages (STR #1169)
	- Fluid Code Viewer is now truly a viewer, not a text
	  editor because edited text can not be saved.
	- Fl_Spinner is now fully supported by Fluid (STR #1158)
	- Fixed usage of deleted object after menu pulldown
	  (STR #1162)
	- Calling fl_font(0, 0) under Xft would access a NULL
	  pointer (STR #1205)
	- Setting a new value in Fl_Input_ wil now actually move
	  cursor to the end of the input field as documented
	  (STR #1161)
	- FLUID crashed on WIN32 with international characters
	  (STR #1176)
	- Fl_Check_Browser did not allow the user to toggle the
	  check boxes (STR #1232)
	- Fl_Help_View crashed on WIN32 with international
	  characters (STR #1228)
	- Fl::run() no longer clears resources on WIN32 (STR
	  #1231)
	- Fl::add_timeout() leaked resources on OSX (STR #1233)
	- Accented characters could not be entered on OSX (STR
	  #1195)
	- The caret key lookup was missing for OS X
	- FLUID didn't handle loading .fl files with
	  international characters properly with all compilers
	  (STR #1150)
	- Fl_Spinner's minimum() and maximum() "get" methods were
	  misspelled (STR #1146)
	- The largefile support changes in 1.1.7 broke binary
	  compability for fl_filename_list(); you must now use
	  "--enable-largefile" when configuring to get large file
	  support, and the large file support definitions are
	  added to the output of "fltk-config --cflags" (STR
	  #1159)


CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #571, STR #648, STR #692, STR
	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
	  STR #969)